--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="icon" href="/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>nelsondev | website design, development</title>
+	<title>NELSONDEV | Calgary Website Designer, Developer</title>
 	<meta name="description" content="Freelance web developer & designer crafting stunning, high-performance websites. Expert in responsive design, SEO, and custom development. Build your online presence today.">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Nelson McCullough, nelsondev, nelsontron">
