--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>NELSONDEV | Calgary Website Designer, Developer</title>
-	<meta name="description" content="Freelance web developer & designer crafting stunning, high-performance websites. Expert in responsive design, SEO, and custom development. Build your online presence today.">
+	<meta name="description" content="Calgary, Alberta freelance web developer & designer crafting stunning, high-performance websites. Expert in responsive design, SEO, and custom development. Build your online presence today.">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Nelson McCullough, nelsondev, nelsontron">
 	<link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.nelsontron.com/sitemap.xml">
